--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "mysql": "^2.11.1",
-    "restify": "^4.2.0"
+    "node-restify-validation": "^1.0.5",
+    "redis": "^2.6.3",
+    "restify": "^4.2.0",
+    "slug": "^0.9.1"
   }
 }
