--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "moment": "^2.17.1",
     "mysql": "^2.11.1",
     "node-restify-validation": "^1.0.5",
     "redis": "^2.6.3",
-    "restify": "^4.2.0",
+    "restify": "^4.3.0",
     "slug": "^0.9.1"
   },
   "devDependencies": {
