--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=dev nodemon index.js",
-    "tests": "NODE_ENV=test node tests.js"
+    "tests": "NODE_ENV=test node tests/index.js init"
   },
   "author": "",
   "license": "ISC",
