--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "REST-api for my portfolio.",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon index.js",
-    "tests": "NODE_ENV=test node tests/index.js init"
+    "start": "NODE_ENV=dev nodemon index.js init",
+    "test-api": "NODE_ENV=test node test/index.js",
+    "test-utils": "NODE_ENV=test node ./node_modules/mocha/bin/mocha",
+    "tests": "npm run test-utils"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +21,9 @@
     "slug": "^0.9.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "hippie": "^0.5.1",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0"
   }
 }
